--- a/source/GermanLearning.WebApp/Components/Pages/Words/AddWord.razor
+++ b/source/GermanLearning.WebApp/Components/Pages/Words/AddWord.razor
@@ -26,7 +26,7 @@
         </MudItem>
 
         <MudItem xs="12" md="6">
-            <MudSelect T="WordType" Label="Type" @bind-Value="_command.Type" For="@(() => _command.Type)" Required="true" Immediate="true">
+            <MudSelect T="WordType" Label="Type" @bind-Value="_command.Type" For="@(() => _command.Type)" Required="true">
                 @if (_allWordTypesForSelect != null)
                 {
                     @foreach (var typeLookup in _allWordTypesForSelect)
