--- a/source/GermanLearning.WebApp/Components/Layout/NavMenu.razor
+++ b/source/GermanLearning.WebApp/Components/Layout/NavMenu.razor
@@ -1,11 +1,12 @@
 ﻿<nav class="nav-menu">
     <ul>
         <li><NavLink href="/" Match="NavLinkMatch.All">Inicio</NavLink></li>
-        <li><NavLink href="/exercises/create">Nuevo ejercicio</NavLink></li>
-        <li><NavLink href="/exercises/history">Historial</NavLink></li>
+@*         <li><NavLink href="/exercises/create">Nuevo ejercicio</NavLink></li>
+        <li><NavLink href="/exercises/history">Historial</NavLink></li> *@
         <li><NavLink href="/words">Lista de palabras</NavLink></li>
         <li><NavLink href="/words/add">Añadir palabra</NavLink></li>
-        <li><NavLink href="/profile">Perfil</NavLink></li>
-        <li><a href="/logout">Cerrar sesión</a></li>
+        <li><NavLink href="/manage-topics">Gestión de temas</NavLink></li>
+@*         <li><NavLink href="/profile">Perfil</NavLink></li>
+        <li><a href="/logout">Cerrar sesión</a></li> *@
     </ul>
 </nav>
